2.0.4
	+ Disable default arbitrary regexes in bannedregexpurllist.mas
2.0.3
	+ Bugfix: when having different filter profiles with domain lists,
	  the lists files are no longer deleted on the second restart
2.0.2
	+ Filter profiles names with spaces are forbidden to avoid errors
	+ Avoid problems with some languages on disk usage graph
2.0.1
	+ Added commercial message
	+ Set DNS servers in Squid configuration
1.5.13
	+ Rebranded access denied page
1.5.12
	+ Add SNMP server from Squid when required
1.5.11
	+ More global proxy configuration and domain configuration improvements
	+ Zentyal rebrand
	+ Running squid daemons are killed when starting ebox proxy if pidfile
	exists
1.5.10
	+ Fixed dansguardian/squid crash when logrotate was daily executed
1.5.9
	+ Fixed profile mime types migrations
1.5.8
	+ Added upstart script for squid to avoid first start problems
1.5.7
	+ Fixed problems with ACL names
1.5.6
	+ Fixed problem with whitespaces in users/groups/objects in squid
	configuration file
1.5.5
	+ Revert range_offset_limit option to default value because was causing
	  troubles with streaming sites.
1.5.4
	+ Added bridged mode support in firewall helper
1.5.3
	+ Bugfix: Delay pools ordering works on UI
1.5.2
	+ Bugfix: use default squid init script instead of old missing ebox.squid
1.5.1
	+ Maximum file descriptor option in now set in /etc/default/squid
	+ Bugfix: Log exception hits in dansguardian so whitelisted
	  domains are now logged properly
	+ Bugfix: Get virtual interfaces as well to set firewall rules
	+ Bugfix: Make some checks in delay pools to avoid
	  misconfiguration, do not write the disabled rules and set the
	  proper labels and more detailed explanation
	+ New bandwidth throttling support with delay pools
	+ Bugfix: trim URL string as DB stores it as a varchar(1024) (Log)
	+ Disabled ban URL regexes
	+ Added filter profile per object
	+ Bugfix, breadcrumbs triggered old problem with parent method in